deployments/blue-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: blue-app
  name: blue-app
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: blue-app
  type: NodePort
status:
  loadBalancer: {}
