deployments/blue-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: blue-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: my-ingress-host
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service: 
            name : blue-app
            port:
              number: 8080
