deployments/green-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: green-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/canary: "true"
    nginx.ingress.kubernetes.io/canary-weight: "25"
spec:
  rules:
  - host: my-ingress-host
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service: 
            name : green-app
            port:
              number: 8081
